Fix layout issues

--- a/css/article.css
+++ b/css/article.css
@@ -1,28 +1,41 @@
 article {
   margin: auto;
   max-width: 500px;
+  min-height: 70vh;
 }
 
+/* sm-inverse breakpoint */
+@media screen and (max-width: 640px) {
+  article {
+    margin: 1em;
+  }
+}
+
+/* sm breakpoint */
 @media screen and (min-width: 640px) {
   article {
     max-width: 600px;
   }
 }
+/* md breakpoint */
 @media screen and (min-width: 768px) {
   article {
     max-width: 700px;
   }
 }
+/* lg breakpoint */
 @media screen and (min-width: 1024px) {
   article {
     max-width: 800px;
   }
 }
+/* xl breakpoint */
 @media screen and (min-width: 1280px) {
   article {
     max-width: 900px;
   }
 }
+/* 2xl breakpoint */
 @media screen and (min-width: 1536px) {
   article {
     max-width: 1000px;
