--- a/css/navigation.css
+++ b/css/navigation.css
@@ -13,10 +13,8 @@ nav.nav-menu {
   align-items: center;
   justify-content: space-between;
 
-  margin-left: 1em;
-  margin-right: 1em;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
+  margin: 0em 1em;
+  padding: 0.5em 0em;
   box-sizing: border-box;
 
   border-bottom: 1px solid #0f172a1a;
